[package]
name = "binance-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
price-src-tcp-shared = { git = "https://github.com/ReachPay/price-src-tcp-shared.git", branch = "0.1.2" }
my-tcp-sockets = { branch = "0.1.3", git = "https://github.com/MyJetTools/my-tcp-sockets.git" }
async-trait = "*"
rust-extensions = { branch = "0.1.0", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-logger = { branch = "0.1.2", git = "https://github.com/MyJetTools/my-logger.git" }
serde_json = "1.0"
serde_yaml = "*"
serde = { version = "1.0.126", features = ["derive"] }

my-settings-reader = { branch = "main", git = "https://github.com/MyJetTools/my-settings-reader.git" }
flurl = { branch = "0.1.2", git = "https://github.com/MyJetTools/fl-url.git" }
signal-hook = "*"
